--- a/src/Header.css
+++ b/src/Header.css
@@ -2,6 +2,7 @@
 
     display: flex;
     justify-content: space-evenly;
+    background-color: white;
     border-bottom: 0.1px solid lightgrey;
     padding-top: 10px;
     padding-bottom: 10px;
