--- a/src/Feed.css
+++ b/src/Feed.css
@@ -1,5 +1,56 @@
 .feed{
     flex: 0.6;
     display: flex;
-    justify-content: center;
+    margin:0 20px;
+    flex-direction: column;
+}
+
+.feed_inputContainer{
+    
+    background-color: white;
+    padding: 10px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.feed_input{
+
+    display: flex;
+    border: 1px solid lightgray;
+    border-radius: 30px;
+    padding: 10px;
+    padding-left: 15px;
+    color: gray;
+    
+}
+
+.feed_input > form{
+
+    display: flex;
+    width: 100%;
+}
+
+.feed_input > form >input{
+
+    border: none;
+    flex: 1;
+    margin-left: 10px;
+    outline-width: 0;
+    font-weight: 600;
+}
+
+.feed_input > form >input:focus{
+    outline: none;
+}
+
+
+.feed_input > form > button{
+    display: none;
+}
+
+.feed_inputOptions{
+    display: flex;
+    justify-content: space-evenly;
 }
