--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,8 @@
     
     display: flex;
     width: 100%;
+    max-width: 1200px;
+    margin-top: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
