--- a/src/Feed.css
+++ b/src/Feed.css
@@ -3,6 +3,8 @@
     display: flex;
     margin:0 20px;
     flex-direction: column;
+    /* overflow-y: scroll; */
+    /* height: 500px; */
 }
 
 .feed_inputContainer{
@@ -12,7 +14,6 @@
     padding-bottom: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
-    width: 100%;
 }
 
 .feed_input{
